@@ -109,6 +109,10 @@ Complete list of settings that you can put into ``testenv*`` sections:
     The Index server to use.  When nothing is specified the default
     of the installation tool (easy_install or pip) will be used.
 
+.. confval:: upgrade=True|False(default)
+
+    Install dependencies in "upgrade" mode by passing upgrade flag to install tools.
+
 .. confval:: downloadcache=path
 
     (pip only) use this directory for caching downloads - this defaults to the
